fix layout of split modals on mobile

--- a/src/View/Components/splitModal.css
+++ b/src/View/Components/splitModal.css
@@ -33,6 +33,7 @@
     justify-content: safe center;
 }
 
+.split-modal[navigation] > div,
 .split-modal[navigation] > div > .scroll-area{
     justify-content: start;
 }
